fix layout issue

--- a/src/css/layout/_form.scss
+++ b/src/css/layout/_form.scss
@@ -1,4 +1,5 @@
 .form-bg {
+  margin-top: -80px;
   min-height: 100vh;
   @include full-background-image(
     "https://images.unsplash.com/photo-1444703686981-a3abbc4d4fe3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80"
